Clean up Storage sample

--- a/src/BlazorToDoMVC/LocalStorageDemo/Pages/Index.cshtml
+++ b/src/BlazorToDoMVC/LocalStorageDemo/Pages/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @using Cloudcrate.AspNetCore.Blazor.Browser.Storage;
-@*@inject LocalStorage Storage*@
+@inject LocalStorage Storage
 
 <section class="todoapp">
     <header class="header">
